--- a/css/main.scss
+++ b/css/main.scss
@@ -1,3 +1,40 @@
+/* Reset */
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+}
+
+
 /* Layout */
+
+#game-screen {
+    min-height: 100vh;
+    width: 100%;
+}
+
+#diva-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 2rem;
+}
+
+.diva-card {
+    text-align: center;
+    .diva-image-container {
+        .diva-image {
+            width: 100%;
+            height: auto;
+        }
+        width: 20rem;
+        height: 20rem;
+    }
+}
+
+
 /* Other Style */
+
+
 /* Fonts */
