--- a/css/main.css
+++ b/css/main.css
@@ -8,11 +8,6 @@
 }
 
 /* Layout */
-#game-screen {
-  min-height: 100vh;
-  width: 100%;
-}
-
 #diva-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -35,6 +30,12 @@
 .diva-card .diva-image-container .diva-image {
   width: 100%;
   height: auto;
+}
+
+#battle-menu {
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
 }
 
 /* Other Style */
