--- a/css/main.scss
+++ b/css/main.scss
@@ -10,11 +10,6 @@
 
 /* Layout */
 
-#game-screen {
-    min-height: 100vh;
-    width: 100%;
-}
-
 #diva-container {
     display: flex;
     justify-content: space-between;
@@ -31,6 +26,11 @@
         width: 20rem;
         height: 20rem;
     }
+}
+
+#battle-menu {
+    display: grid;
+    place-items: center;
 }
 
 
