--- a/css/main.scss
+++ b/css/main.scss
@@ -10,6 +10,14 @@
 
 /* Layout */
 
+#game-screen {
+    display: grid;
+}
+
+#start-button {
+    place-self: center;
+}
+
 #diva-container {
     display: flex;
     justify-content: space-between;
